fixed line spacing to be dynamic

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,6 @@ html {
 
 .title {
     font-size: 50px;
-    /* font-family: Inter var,sans-serif; */
     font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
     color: rgb(255,255,255);
     max-width: 90%;
@@ -31,14 +30,12 @@ html {
     bottom:30%;
     position: fixed;
     max-width: 100%;
-    /* outline-style: solid; 
-    outline-color: #FCC676; */
 }
 
 .chevron {
     position: fixed;
     right: 7%;
-    top: 40%;
+    top: 35%;
     color: rgb(255,255,255);
 	border-style: solid;
 	border-width: 0.25em 0.25em 0 0;
@@ -46,11 +43,18 @@ html {
 	display: inline-block;
 	height: 1.80em;
 	transform: rotate(-45deg);
-	width: 1.80em;
+    width: 1.80em;
+    padding: 5px;
+}
+
+.chevron:hover {
+    cursor: pointer;
+    transition-duration: 1.5s;
+    color: #FCC676;
 }
 
 .chevron.down{
-    margin-top: 7%;
+    margin-top: 9%;
     transform: rotate(135deg);
 }
 
@@ -84,15 +88,15 @@ html {
     font-size: 30px;
     font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
     color: rgb(255,255,255);
-    padding-top: 15px;
-    padding-bottom: 10px;
+    padding-top: 0.5%;
+    padding-bottom: 0.5%;
     margin: auto;
 }
 
 .content {
     position: absolute;
     width: 650px;
-    padding-left: 30px;
+    padding-left: 3%;
     max-width: 90%;
 }
 
@@ -100,7 +104,7 @@ html {
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, sans-serif, sans-serif;
     color: rgb(255,255,255);
-    padding-top: 5px;
+    padding-top: 1%;
     margin: auto;
 }
 
